--- a/examples.ipynb
+++ b/examples.ipynb
@@ -36,9 +36,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ofp version=\"0.8.4\">\n",
-      "  <file col_begin=\"6\" col_end=\"24\" line_begin=\"2\" line_end=\"8\" path=\"/Users/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\">\n",
-      "    <start-of-file filename=\"test/examples/empty.f\" path=\"/Users/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\" rule=\"-2\" />\n",
+      "<ofp version=\"0.8.5-1\">\n",
+      "  <file col_begin=\"6\" col_end=\"24\" line_begin=\"2\" line_end=\"8\" path=\"/home/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\">\n",
+      "    <start-of-file filename=\"test/examples/empty.f\" path=\"/home/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\" rule=\"-2\" />\n",
       "    <comment col_begin=\"6\" col_end=\"36\" line_begin=\"2\" line_end=\"2\" text=\"! minimalistic Fortran program\" />\n",
       "    <program col_begin=\"6\" col_end=\"24\" line_begin=\"4\" line_end=\"8\" name=\"empty\">\n",
       "      <main-program__begin addendum=\"begin\" rule=\"1101\" />\n",
@@ -57,7 +57,7 @@
       "      <end-program-stmt col_begin=\"6\" col_end=\"24\" endKeyword=\"end\" eos=\"&#10;\" id=\"empty\" line_begin=\"8\" line_end=\"8\" programKeyword=\"program\" rule=\"1103\" />\n",
       "      <main-program hasExecutionPart=\"false\" hasInternalSubprogramPart=\"false\" hasProgramStmt=\"true\" rule=\"1101\" />\n",
       "    </program>\n",
-      "    <end-of-file filename=\"test/examples/empty.f\" path=\"/Users/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\" rule=\"-2\" />\n",
+      "    <end-of-file filename=\"test/examples/empty.f\" path=\"/home/mateusz/Projects/open-fortran-parser-xml/test/examples/empty.f\" rule=\"-2\" />\n",
       "  </file>\n",
       "</ofp>\n"
      ]
@@ -117,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
